--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,20 +91,22 @@
 
     .btn-dataSave {
         padding: .7rem;
+        width: 30%;
         margin-top: 1.5rem;
         text-align: center;
-        font-size: 2rem;
-        font-weight: 400;
+        font-size: 1.5rem;
+        font-weight: 200;
         background-color: #d9f7e5;
     }
 
     .btn-loadData {
         padding: .7rem;
+        width: 30%;
         margin-top: 1.5rem;
-        margin-left: 2rem;
+        margin-left: 1.5rem;
         text-align: center;
-        font-size: 2rem;
-        font-weight: 400;
+        font-size: 1.5rem;
+        font-weight: 200;
         background-color: #b5cef3;
     }
 
@@ -124,7 +126,7 @@
         width: 10%;
         height: 50%;
         font-size: 2rem;
-        font-weight: 400;
+        font-weight: 200;
         color: #e60505;
     }
 
@@ -133,6 +135,6 @@
         width: 10%;
         height: 50%;
         font-size: 2rem;
-        font-weight: 400;
+        font-weight: 200;
         color: #333333;
     }
