changed .btn-loadData click event

--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -25,7 +25,7 @@
             <div>
                 <button class="btn-dataSave">データ保存</button>
 
-                <button class="btn-loadData">データ読込み</button>
+                <button class="btn-loadData">スタート</button>
             </div>
 
             <div class="totalStock-container">
@@ -39,7 +39,7 @@
 
             <div id="meatstock-container">
 
-                <div class="container">
+                {{!-- <div class="container">
                     <h4 id="title-kataR_300">しゃぶしゃぶ用300g</h4>
                     
                     <div class="element" id="kataR_300">
@@ -197,7 +197,7 @@
                         <button class="btn-dec" id="btn-dec_beef_kaburi_300"> - </button> 
                         <button class="btn-add" id="btn-add_beef_kaburi_300"> + </button>
                     </div>
-                </div>
+                </div> --}}
 
             </div> {{!-- meatstock-container END --}}
 
